# phalanx

./: Cargo.toml  README.md
examples/diesel/: Cargo.toml
examples/diesel/migrations/2021-01-08-190753_create_posts/: up.sql
examples/diesel/src/: lib.rs  models.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: client.rs  lib.rs  server.rs
examples/simple_server/: Cargo.toml
examples/simple_server/src/: main.rs
phalanx/: Cargo.toml
phalanx/src/: client.rs  lib.rs  server.rs  util.rs
phalanx/src/server/: mod.rs  mount.rs
phalanx/src/web/: json.rs
phalanx_codegen/: Cargo.toml
phalanx_codegen/src/: derive.rs  lib.rs  route.rs  service.rs
phalanx_codegen/src/route/: client.rs  mod.rs  route_attr.rs  server.rs
phalanx_codegen/tests/: test.rs
phalanx_codegen/tests/ui/: missing-client-struct.rs  missing-client-struct.stderr  missing-client-tuple.rs  missing-client-tuple.stderr  requires-client.rs  requires-client.stderr
