[package]
name = "phalanx"
version = "0.1.0"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

[lib]
name = "phalanx"

[dependencies]
phalanx_codegen = { path = "../phalanx_codegen" }
actix-web = "3.3.2"
reqwest = { version = "0.10.10", features = ["json"] }
err-derive = "0.3.0"
futures = "0.3.8"
actix-service = "1.0.6"
serde = "1.0.118"
