[package]
name = "phalanx_codegen"
version = "0.1.0"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.17", features = ["full"] }
proc-macro-error = "0.4.12"
quote = "1.0.3"
proc-macro2 = "1.0.9"

[dev-dependencies]
phalanx = { path = "../phalanx" }
actix-web = "3.3.2"
trybuild = "1.0.38"
