[package]
name = "diesel_example"
version = "0.1.0"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

[lib]
name = "diesel_example"

[dependencies]
env_logger = "0.8.1"
phalanx = { path = "../../phalanx" }

actix-web = { version = "3.3.2" }
reqwest = { version = "0.10.10" }
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
anyhow = "1.0.37"
serde = "1.0.118"
structopt = "0.3.21"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
