[package]
name = "hello_world"
version = "0.1.0"
authors = ["Colin Moore <colin@moore.one>"]
edition = "2018"

[lib]
name = "hello_world"

[dependencies]
env_logger = "0.8.1"
phalanx = { path = "../../phalanx" }
reqwest = { version = "0.10.10" }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"